public static class AnimationStrings
{
    internal static readonly string IsMoving = "isMoving";
    internal static readonly string isOnWall = "isOnWall";
    internal static readonly string isGrounded = "isGrounded";
    internal static readonly string isOnCeiling = "isOnCeiling";
    internal static readonly string jumpTrigger = "jump";
}
